--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,17 @@
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>5.4.0</version>
                 <scope>test</scope>
-        </dependency>
-
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-inline</artifactId>
+                <version>4.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>4.4.0</version>
+            </dependency>
         </dependencies>
 
     <build>
@@ -77,7 +86,7 @@
                 <artifactId>function-maven-plugin</artifactId>
                 <version>0.10.0</version>
                 <configuration>
-                    <functionTarget>com.redletra.standupsally.functions.StandupSally</functionTarget>
+                    <functionTarget>com.redletra.standupsally.functions.StandupSallyEventListener</functionTarget>
                 </configuration>
             </plugin>
             <plugin>
